--- a/holaMundo.html
+++ b/holaMundo.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Hola mundo</title>
   </head>
-  <body>
+  <body onclick="alert('quita tus manos de encima')">
     <p>Hola <strong>mundo</strong></p>
   </body>
 </html>
