--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </style>
   </head>
   <body class="descripcion">
-    <p id="titulo" title="Empresa"> <strong>Lipsum Medical</strong></p><hr>
+    <p id="titulo" title="Empresa"> <strong>Lipsum Medical</strong></p>
+    <hr>
     <nav> <a href="ejerciciosTema2/nosotros.html">Nosotros </a> <br>
       <br>
       <a href="ejerciciosTema2/nuestrosServicios.html">Nuestros servicios </a>
