--- a/ejerciciosTema3/opinion.html
+++ b/ejerciciosTema3/opinion.html
@@ -158,11 +158,14 @@
        <div> <label for="specs">Si has elegido "Otro", especifica cuál:</label><br>
               <textarea name="specs" id="specs" cols="40" rows="5"></textarea> </div>
           </fieldset>
-          <input name="_next" value="https://rawgit.com/sarapsix/disenoWeb/master/ejerciciosTema3/thanks.html" type="hidden"> <input value="Enviar" type="submit"> </form>
+          <input value="Enviar" type="submit"> </form>
+      
       </article>
-    </section>
+      </section>
 <footer>
       <p>Copyright</p>
-      <p>Social Media Links</p>
+      <p>Curso UA</p>
     </footer>
-</body></html>
+  
+</body>
+  </html>
