--- a/ejerciciosTema2/nosotros.html
+++ b/ejerciciosTema2/nosotros.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    
     <title>Nosotros</title>
     <style>
     .descripcion{
-      background-color: silver;
+      background:#ddd3bf;
       }
        #titulo {
       text-align: center; font-size: x-large;
@@ -46,5 +47,4 @@
     <p> <img src="../imagenes/logo_empresa.png"> </p>
     <p><br>
     </p>
-  </body>
-</html>
+</body></html>
