--- a/ejerciciosTema2/nuestrosServicios.html
+++ b/ejerciciosTema2/nuestrosServicios.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    
     <title>Nuestros Servicios</title>
     <style>
     .descripcion{
-      background-color: silver;
+      background:#ddd3bf;
       }
        #titulo {
       text-align: center; font-size: x-large;
@@ -25,7 +26,7 @@
       <a href="mailto:sarapsix@gmail.com">E-mail </a>
       <br>
       <br>
-    <a href="#Urología">Ir al final</a></nav>
+    <a href="#Urolog%C3%ADa">Ir al final</a></nav>
     <a name="consultas"></a>
     <h2> Consultas Médicas </h2>
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eleifend,
@@ -238,6 +239,4 @@
     <a href="#serv">Ir arriba</a> <br>
     <p><br>
     </p>
-    
-  </body>
-</html>
+</body></html>
